--- a/requirements.txt
+++ b/requirements.txt
@@ -130,6 +130,7 @@ typing-inspection==0.4.1
 typing_extensions==4.14.0
 tzdata==2025.2
 ujson==5.10.0
+ultralytics>=8.3.0
 uritemplate==4.2.0
 urllib3==2.4.0
 uvicorn==0.30.1
